# udt-r

./: .travis.yml  Cargo.toml  LICENSE-MIT  README.md
src/: cli.rs  logger.rs  main.rs  server.rs  sys_info.rs
static/: index.html
